# IMDBee

./: .gitignore  README.md  pyproject.toml
src/IMDBee/: __init__.py  model.py
