[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "IMDBee"
version = "0.1.0"
description = "A python module to retrieve data from IMDB"
readme = "README.md"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["imdb", "movie", "series"]
dependencies = [
    "sgqlc >= 16.4",
    "requests >= 2.32.3",
]
requires-python = ">=3.9"

[project.optional-dependencies]
async = ["aiohttp >= 3.9.5"]

[project.urls]
Homepage = "https://github.com/Amir-Hossein-ID/IMDBee"
